--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,51 @@
+# Google Sheets credentials
+credentials.json
+token.json
+
+# Emacs backups
+*~
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Typical Node.js artifacts #
+#############################
+
 # Logs
 logs
 *.log
@@ -34,7 +82,15 @@ build/Release
 
 # Dependency directories
 node_modules/
+**/node_modules/
 jspm_packages/
+**/jspm_packages
+
+# Distributions
+dist/
+
+# Temporary junk
+temp/
 
 # TypeScript v1 declaration files
 typings/
@@ -59,3 +115,7 @@ typings/
 
 # next.js build output
 .next
+
+
+## Emacs artefacts ##
+*~
