--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,8 @@
+# BABY INFO
+BABY_PHOTO_URL=https://foo.bar/photos/baby.jpg
+BABY_NAME=Boo Baz
+BABY_BOYGIRL=girl
+
 # TWILIO ACCOUNT
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
