--- a/.env-example
+++ b/.env-example
@@ -2,6 +2,9 @@
 BABY_PHOTO_URL=https://foo.bar/photos/baby.jpg
 BABY_NAME=Boo Baz
 BABY_BOYGIRL=girl
+BABY_MOTHER_NAME=Jane
+BABY_FATHER_NAME=John
+BABY_SIBLING_NAMES=Cynthia and Bill
 
 # TWILIO ACCOUNT
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
