example .env file

--- a/.env-example
+++ b/.env-example
@@ -1,22 +1,22 @@
-# BABY INFO
-BABY_PHOTO_URL=https://foo.bar/photos/baby.jpg
-BABY_NAME=Boo Baz
-BABY_BOYGIRL=girl
-BABY_MOTHER_NAME=Jane
-BABY_FATHER_NAME=John
-BABY_SIBLING_NAMES=Cynthia and Bill
-
-# TWILIO ACCOUNT
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_PHONE_NUMBER=your_twilio_phone_number
-
-# IBM WATSON ASSISTANT
-ASSISTANT_IAM_APIKEY=your_watson_assistant_api_key
-ASSISTANT_URL=your_watson_assistant_url
-ASSISTANT_ID=your_watson_assistant_id
-ASSISTANT_WORKSPACE_ID=your_watson_assistant_workspace_id
-ASSISTANT_SESSION_TIMEOUT_SECONDS=300
-
 # WEB SERVER PORT
 PORT=3000
+
+# BABY INFO
+BABY_PHOTO_URL=https://foobar.com/baz.jpg
+BABY_NAME=Baz Barstein
+BABY_BOYGIRL=girl
+BABY_MOTHER_NAME=Foo
+BABY_FATHER_NAME=Bar
+BABY_SIBLING_NAMES=Bim and Bop
+
+# TWILIO ACCOUNT
+TWILIO_ACCOUNT_SID=<twilio account sid>
+TWILIO_AUTH_TOKEN=<twilio auth token>
+TWILIO_PHONE_NUMBER=<twilio phone #>
+
+# IBM WATSON ASSISTANT
+ASSISTANT_IAM_APIKEY=<watson assistant api key>
+ASSISTANT_URL=https://gateway-fra.watsonplatform.net/assistant/api
+ASSISTANT_ID=<watson assistant id>
+ASSISTANT_WORKSPACE_ID=<watson assistant workspace id>
+ASSISTANT_SESSION_TIMEOUT_SECONDS=300
